--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,8 @@ body {
 
 .food-row img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    object-fit: cover;
     border-radius: 8px;
 }
 
