--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: "Times new roman";
+    font-family: "Arial";
     background: #f7f7f7;
     color: #222;
     line-height: 1.6;
@@ -28,7 +28,7 @@ img {
 }
 
 .card {
-    background: green;
+    background: rgba(10, 153, 10, 0.171);
     padding: 20px;
     border-radius: 12px;
     border: 1px solid #e6e6e6;
@@ -49,22 +49,27 @@ img {
 .logo img {
     width: 90px;
     border-radius: 50%;
+    padding: 15px;
 }
 
 .site-title {
     font-size: 2.2rem;
     font-weight: 700;
+    text-align: center;
+    color: white;
 }
 
 .nav {
     display: flex;
     gap: 20px;
     padding: 10px;
+    
+    
 }
 
 .nav a {
     text-decoration: none;
-    color: #333;
+    color: white;
     font-weight: 600;
 }
 
