--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ img {
     gap: 20px;
     padding-bottom: 10px;
     border-bottom: 2px solid #ddd;
-    background: rgb(177, 128, 2);
+    background: whitesmoke;
 }
 
 .logo img {
@@ -53,10 +53,10 @@ img {
 }
 
 .site-title {
-    font-size: 2.2rem;
+    font-size: 3.2rem;
     font-weight: 700;
     text-align: center;
-    color: white;
+    color: green;
 }
 
 .nav {
@@ -69,8 +69,9 @@ img {
 
 .nav a {
     text-decoration: none;
-    color: white;
+    color: green;
     font-weight: 600;
+    font-size: 1.0rem;
 }
 
 .nav a:hover{
@@ -107,25 +108,27 @@ img {
     gap: 25px;
 }
 
-.Hours_mission h3{
-    color: white;
+.Hours_mission h2{
+    color: black;
 }
 .Hours_mission ul{
     list-style: none;
     font-size: 20px;
+    color: white;
 }
 .Hours_mission p{
 
     font-size: 20px;
     font-style: italic;
     text-align: justify;
-}
-.menu h3{
     color: white;
+}
+.menu h2{
+    color: black;
 }
 
 .menu a{
-    color: #222;
+    color: white;
     text-decoration: none;
     font-size: 20px;
 }
@@ -143,7 +146,7 @@ img {
     background: #a8a5a5;
 }
 
-.best-seller-title h2 {
+.best-seller-title h3 {
     font-size: 2rem;
 }
 
@@ -159,10 +162,14 @@ img {
     flex-direction: column;
     align-items: center;   
     text-align: justify;
-    font-size: 15px;
+    
+    
 }
 .food-item p{
     font-size: 15px;
+    color: white;
+    padding-top: 10px;
+    font-size: 1.0rem;
 }
 
 
